--- a/landingPage/landingPage.html
+++ b/landingPage/landingPage.html
@@ -5,18 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="landingPage.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anton&family=Diplomata+SC&family=Indie+Flower&family=Kite+One&family=Pacifico&family=Smokum&family=Special+Elite&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Anton&family=Indie+Flower&family=Kite+One&family=Pacifico&family=Smokum&family=Special+Elite&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Diplomata+SC&family=Monoton&family=Special+Elite&family=Ultra&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
   <div id="root">
     <div>
-      <h1>PILGRIMAGE</h1>
+      <h1 id="text">PILGRIMAGE</h1>
     </div>
 
     <div>
@@ -26,5 +21,13 @@
       <p>SIGN UP</p>
     </div>
   </div>
+
+
+
+  <script>
+    
+
+
+  </script>
 </body>
 </html>
