스크롤만드는중

--- a/2. Login Page/loginPage.html
+++ b/2. Login Page/loginPage.html
@@ -23,29 +23,27 @@
 
           <div>
             <div>
-              <p>E-mail</p>
+              <input id="id" type="text" placeholder="E-mail">
             </div>
             <div></div>
           </div>
 
           <div>
             <div>
-              <p>Password</p>
+              <input id="password" type="text" placeholder="Password">
             </div>
             <div></div>
           </div>
 
-          <div>
+          <div id="btn">
             <p>Sign in</p>
           </div>
         </div>
 
       </div>
-
-
-
     </div>
-
   </div>
+
+<script src="../javascript/login.js"></script>
 </body>
 </html>
