--- a/1. landingPage/landingPage.html
+++ b/1. landingPage/landingPage.html
@@ -15,11 +15,19 @@
     </div>
 
     <div>
-      <p>LOGIN</p>
-    </div>
-    <div>
-      <p>SIGN UP</p>
+      <div id="id">
+        <p>LOGIN</p>
+      </div>
+
+      <div id="password">
+        <p>SIGN UP</p>
+      </div>
+
+      <div>
+
+      </div>
     </div>
   </div>
 </body>
+<script src="../javascript/login.js"></script>
 </html>
