영화 기능 추가중

--- a/6. actorPage/actorpage.html
+++ b/6. actorPage/actorpage.html
@@ -21,7 +21,7 @@
   </div>
 </div>
 
-<div>
+<div id="film">
   <div></div>
   <div></div>
   <div></div>
@@ -30,4 +30,5 @@
 </div>  
 
 </body>
+<script src="./actorPage.js"></script>
 </html>
