--- a/7. filmPage/filmPage.html
+++ b/7. filmPage/filmPage.html
@@ -25,7 +25,7 @@
       <P>김의성</P>
     </div>
 
-    <div>
+    <div id="icon">
       <div></div>
       <div></div>
       <div></div>
@@ -53,4 +53,6 @@
 </div>
 </div>
 </body>
+
+<script src="./filmPage.js"></script>
 </html>
