--- a/7. filmPage/filmPage.html
+++ b/7. filmPage/filmPage.html
@@ -16,7 +16,7 @@
   </div>
 
 <div>
-  <div></div>
+    <video src="./Trailer l BIFF2017 죄 많은 소녀 After My Death l 뉴 커런츠.mp4" id="teaser" style="width: 100vw;"></video>
 </div>
 
 <div>
@@ -26,14 +26,26 @@
     </div>
 
     <div id="icon">
-      <div></div>
+      <div>
+        <img src="./image/watcha.svg" id="logo" style="width: 15vw;" alt="">
+      </div>
       <div></div>
       <div></div>
     </div>
   </div>
 
   <div>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur hic doloremque vero, tempore, unde laboriosam modi, consequatur repellat non </p>
+    <p>친구가 사라지고, 모두가 나를 의심한다</p>
+
+    <p>같은 반 친구 ‘경민’의 갑작스런 실종으로
+      마지막까지 함께 있었던 ‘영희(전여빈)’는 가해자로 지목된다.
+      딸의 실종 이유를 알아야 하는 ‘경민’의 엄마,
+      사건의 진실을 밝혀야 하는 형사, 친구의 진심을 숨겨야 하는 ‘한솔’,
+      상황을 빨리 정리하고 싶은 담임 선생님까지.
+      주변의 모든 사람들이 ‘영희’를 의심한다.
+      죄 많은 소녀가 된 ‘영희’는 결백을 증명해야만 하는데...</p>
+      
+      <p>2018년 가장 날카롭고 충격적인 시선</p>
   </div>
 
   <div>
@@ -55,4 +67,5 @@
 </body>
 
 <script src="./filmPage.js"></script>
+<script src="./videoPlay.js"></script>
 </html>
